force-app/main/default/objects/Activity/fields/Assigned_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Profiles__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <label>Assigned Profile</label>
    <type>Text</type>
</CustomField>