force-app/main/default/objects/Activity/fields/Call_Reason__c.field-meta.xml
<CustomField>
    <fullName>Call_Reason__c</fullName>
    <label>Call Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ablehnung Krankenkasse</fullName>
            </value>
            <value>
                <fullName>Adressänderung</fullName>
            </value>
            <value>
                <fullName>Allgemeiner Ablauf</fullName>
            </value>
            <value>
                <fullName>Beschwerde Stufe 1 DEXCOM Service</fullName>
            </value>
            <value>
                <fullName>Beschwerde Stufe 1 Produkte allgemein</fullName>
            </value>
            <value>
                <fullName>Beschwerde Stufe 1 Service Lieferant</fullName>
            </value>
            <value>
                <fullName>Beschwerde Stufe 2 DEXCOM Service</fullName>
            </value>
            <value>
                <fullName>Beschwerde Stufe 2 Produkte allgemein</fullName>
            </value>
            <value>
                <fullName>Beschwerde Stufe 2 Service Lieferant</fullName>
            </value>
            <value>
                <fullName>Beschwerde Stufe 3 DEXCOM Service</fullName>
            </value>
            <value>
                <fullName>Beschwerde Stufe 3 Produkte allgemein</fullName>
            </value>
            <value>
                <fullName>Beschwerde Stufe 3 Service Lieferant</fullName>
            </value>
            <value>
                <fullName>Briefe von DEXCOM</fullName>
            </value>
            <value>
                <fullName>FollowUp</fullName>
            </value>
            <value>
                <fullName>G6</fullName>
            </value>
            <value>
                <fullName>Kassenrückfragen Kostenvoranschlag</fullName>
            </value>
            <value>
                <fullName>Kassenrückfragen Sonstige</fullName>
            </value>
            <value>
                <fullName>Kassenrückfragen Versorgungszeitraum</fullName>
            </value>
            <value>
                <fullName>Lieferung, Lieferumfang</fullName>
            </value>
            <value>
                <fullName>Marketingaktionen</fullName>
            </value>
            <value>
                <fullName>Produktfragen</fullName>
            </value>
            <value>
                <fullName>Rechnung</fullName>
            </value>
            <value>
                <fullName>Retoure</fullName>
            </value>
            <value>
                <fullName>Sonstige (Notiz erforderlich)</fullName>
            </value>
            <value>
                <fullName>Technischer Support</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Versorgung allgemein</fullName>
            </value>
            <value>
                <fullName>Data protection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>