force-app/main/default/objects/Activity/fields/EGEKO_Message_Key__c.field-meta.xml
<CustomField>
    <fullName>EGEKO_Message_Key__c</fullName>
    <description>Message key used for EGEKO Messages</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EGEKO Message Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>