force-app/main/default/objects/Activity/fields/Non_CH_Person__c.field-meta.xml
<CustomField>
    <fullName>Non_CH_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non CH Person</label>
    <type>Checkbox</type>
</CustomField>