force-app/main/default/objects/Activity/fields/OK_Top_Level_Account__c.field-meta.xml
<CustomField>
    <fullName>OK_Top_Level_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Top level account- IQVIA requirement</description>
    <label>Top Level Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>