force-app/main/default/objects/Activity/fields/PCS_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>PCS_Reason_Code__c</fullName>
    <label>PCS Reason Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accuracy and Calibration training</fullName>
            </value>
            <value>
                <fullName>Advanced Education for Retention</fullName>
            </value>
            <value>
                <fullName>Auth Code Update</fullName>
            </value>
            <value>
                <fullName>Clarity Full Training</fullName>
            </value>
            <value>
                <fullName>Connectivity</fullName>
            </value>
            <value>
                <fullName>Contraindications</fullName>
            </value>
            <value>
                <fullName>Feature Training- Getting Started Education</fullName>
            </value>
            <value>
                <fullName>G5 to G6 Feature Training</fullName>
            </value>
            <value>
                <fullName>Intro to Dexcom Care</fullName>
            </value>
            <value>
                <fullName>Patient Care outreach, left voicemail</fullName>
            </value>
            <value>
                <fullName>Receiver/ phone set up</fullName>
            </value>
            <value>
                <fullName>Ref to other department, non- education</fullName>
            </value>
            <value>
                <fullName>Refer to TS, non-education</fullName>
            </value>
            <value>
                <fullName>Refer to CS, non-education</fullName>
            </value>
            <value>
                <fullName>Transferred to PCS, non-education</fullName>
            </value>
            <value>
                <fullName>Transferred to PCS, education</fullName>
            </value>
            <value>
                <fullName>Sensor Insertion, transmitter &amp; Starting session</fullName>
            </value>
            <value>
                <fullName>Software Training</fullName>
            </value>
            <value>
                <fullName>Skin prep &amp; adhesive tape training</fullName>
            </value>
            <value>
                <fullName>Stop sensor training</fullName>
            </value>
            <value>
                <fullName>System component training</fullName>
            </value>
            <value>
                <fullName>Technology and apps</fullName>
            </value>
            <value>
                <fullName>Training on treatment decisions</fullName>
            </value>
            <value>
                <fullName>Travel info</fullName>
            </value>
            <value>
                <fullName>Value of CGM and what to expect</fullName>
            </value>
            <value>
                <fullName>Water resistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>