force-app/main/default/objects/Activity/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.WhatId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>