force-app/main/default/objects/Activity/fields/Product_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Product_Discussed__c</fullName>
    <label>Product Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G4</fullName>
            </value>
            <value>
                <fullName>G5</fullName>
            </value>
            <value>
                <fullName>G6</fullName>
            </value>
            <value>
                <fullName>Clarity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Dexcom Store</fullName>
            </value>
            <value>
                <fullName>iOS App</fullName>
            </value>
            <value>
                <fullName>Android App</fullName>
            </value>
            <value>
                <fullName>Share / Follow App</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Overlay Patches</fullName>
            </value>
            <value>
                <fullName>Pharmacy Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>