force-app/main/default/objects/Activity/fields/tdc_tsw__Email_To__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Email_To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>